[package]
name = "cgid"
version = "0.1.0"
authors = ["Matt Woodyard <matt@mattwoodyard.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
acme-client = "*"
async-process = "*"
async-std = { features = ["attributes"] }
base64 = "*"
clap = { path = "clap" }
futures-lite ="*"
serde = "*"
serde_json = "*"
tide = "*"
tide-rustls = { path = "tide-rustls" }
async-tls = {version = "0.10.0" }
rustls = { version = "0.19.0" }
