[package]
name = "cgid"
version = "0.1.0"
authors = ["Matt Woodyard <matt@mattwoodyard.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-process = "*"
async-std = { features = ["attributes"] }
base64 = "*"
clap = { git ="https://github.com/clap-rs/clap", revision="3520a30b6e83f2126b9b9560ff95a23717a47ebf"}
futures-lite ="*"
serde = "*"
serde_json = "*"
tide = "*"
tide-rustls = { version = "0.1.5" }
async-tls = {version = "0.10.0" }
rustls = { version = "0.19.0" }
